# BlockSci

./: .clang-format  .clang-tidy  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  build.md  flake.nix  nix.md  ruff.toml
benchmark/: CMakeLists.txt  main.cpp
blockscipy/: CMakeLists.txt  pyproject.toml
blockscipy/blocksci/: __init__.py  blockchain_info.py  currency.py  opreturn.py  pickler.py
blockscipy/src/: blocksci_iterator_type.cpp  blocksci_iterator_type.hpp  blocksci_range_create.hpp  blocksci_range_type.cpp  blocksci_range_type.hpp  blocksci_type.cpp  blocksci_type.hpp  blocksci_type_converter.cpp  blocksci_type_converter.hpp  caster_py.hpp  func_converter.hpp  generic_proxy.cpp  generic_proxy.hpp  generic_sequence.cpp  generic_sequence.hpp  heuristics_py.cpp  method_tags.hpp  method_types.cpp  method_types.hpp  proxy.hpp  proxy_apply_py.hpp  proxy_create.cpp  proxy_create.hpp  proxy_py.hpp  proxy_py_create.hpp  proxy_type_check.cpp  proxy_type_check.hpp  proxy_utils.hpp  python_fwd.hpp  python_interface.cpp  python_proxies.cpp  python_proxies_main.cpp  python_proxies_other.cpp  python_proxies_types.hpp  python_proxy_scripts.cpp  python_range.hpp  python_range_conversion.cpp  python_range_conversion.hpp  ranges_py.hpp  self_apply_py.hpp  (+2 more)
blockscipy/src/chain/: blockchain_py.cpp
blockscipy/src/chain/block/: block_properties_py.hpp  block_proxy_py.cpp  block_py.cpp
blockscipy/src/chain/input/: input_properties_py.hpp  input_proxy_py.cpp  input_py.cpp
blockscipy/src/chain/output/: output_properties_py.hpp  output_proxy_py.cpp  output_py.cpp
blockscipy/src/chain/tx/: tx_properties_py.hpp  tx_proxy_py.cpp  tx_py.cpp
blockscipy/src/cluster/cluster/: cluster_properties_py.hpp  cluster_proxy_py.cpp  cluster_py.cpp
blockscipy/src/cluster/tagged_address/: tagged_address_proxy_py.cpp  tagged_address_py.cpp
blockscipy/src/cluster/tagged_cluster/: tagged_cluster_proxy_py.cpp  tagged_cluster_py.cpp
blockscipy/src/generic_proxy/: optional.cpp  optional.hpp  optional_map.cpp  optional_map.hpp  range.cpp  range.hpp  range_map.hpp  range_map_optional_core.cpp  range_map_optional_impl.hpp  range_map_optional_other.cpp  range_map_optional_scripts.cpp  range_map_sequence_core.cpp  range_map_sequence_impl.hpp  range_map_sequence_other.cpp  range_map_sequence_scripts.cpp  range_map_simple_impl.hpp  range_map_simple_iterator_core.cpp  range_map_simple_iterator_other.cpp  range_map_simple_iterator_scripts.cpp  range_map_simple_range_core.cpp  range_map_simple_range_other.cpp  range_map_simple_range_scripts.cpp
blockscipy/src/proxy/: arithmetic.hpp  arithmetic_range.hpp  basic.hpp  boolean.hpp  comparison.hpp  equality.hpp  optional.hpp  optional_arithmetic.hpp  proxy_flow_functions_core.cpp  proxy_flow_functions_impl.hpp  proxy_flow_functions_other.cpp  proxy_flow_functions_scripts.cpp  proxy_functions.hpp  proxy_functions_core.cpp  proxy_functions_impl.hpp  proxy_functions_other.cpp  proxy_functions_scripts.cpp  range.hpp
blockscipy/src/scripts/: address_proxy_py.cpp  address_py.cpp  address_py.hpp
blockscipy/src/scripts/equiv_address/: equiv_address_proxy_py.cpp  equiv_address_py.cpp
blockscipy/src/scripts/multisig/: multisig_proxy_py.cpp  multisig_py.cpp
blockscipy/src/scripts/nonstandard/: nonstandard_proxy_py.cpp  nonstandard_py.cpp
blockscipy/src/scripts/nulldata/: nulldata_proxy_py.cpp  nulldata_py.cpp
blockscipy/src/scripts/pubkey/: pubkey_proxy_impl.hpp  pubkey_py.cpp
blockscipy/src/scripts/pubkey/multisig_pubkey/: multisig_pubkey_proxy_py.cpp
blockscipy/src/scripts/scripthash/: scripthash_proxy_impl.hpp  scripthash_py.cpp
blockscipy/src/scripts/witness_unknown/: witness_unknown_proxy_py.cpp  witness_unknown_py.cpp
blockscipy/src/simple/: address_type_proxy.cpp  bool_proxy.cpp  bytes_proxy.cpp  int_proxy.cpp  list_proxy.cpp  simple_proxies.hpp  string_proxy.cpp  time_proxy.cpp  uint160_proxy.cpp  uint256_proxy.cpp
docs/: conf.py
src/internal/: CMakeLists.txt  address_index.cpp  address_index.hpp  address_info.cpp  address_info.hpp  address_output_range.cpp  address_output_range.hpp  bitcoin_script.cpp  bitcoin_script.hpp  bitcoin_uint256_hex.cpp  bitcoin_uint256_hex.hpp  chain_access.hpp  chain_configuration.cpp  chain_configuration.hpp  cluster_access.hpp  column_iterator.hpp  data_access.cpp  data_access.hpp  data_configuration.cpp  data_configuration.hpp  dedup_address_info.cpp  dedup_address_info.hpp  exception.cpp  exception.hpp  file_mapper.hpp  hash.cpp  hash.hpp  hash_index.cpp  hash_index.hpp  memory_view.hpp  mempool_index.hpp  progress_bar.hpp  script_access.hpp  script_info.hpp  script_view.cpp  script_view.hpp  state.cpp  state.hpp
(+187 files in other folders)
