[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "blocksci"
version = "0.7.0"
description = "BlockSci: A high-performance tool for blockchain science and exploration"
authors = [
  { name = "Harry Kalodner", email = "blocksci@cs.princeton.edu" },
]
requires-python = ">=3.11"
dependencies = [
  "multiprocess>=0.70.5",
  "psutil>=5.4.2",
  "pycryptodome>=3.0",
  "pandas>=0.22.0",
  "dateparser>=0.6.0",
  "requests>=2.19.1",
]


[tool.scikit-build]
wheel.packages = ["blocksci"]
